--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,9 +1,9 @@
 .Portfolio {
-  min-height: 100%;
+  min-height: 80vh;
 }
 
 #header {
-  height: 100%;
+  min-height: 80vh;
   width: 100%;
   background-image: url('./4.jpg');
   background-size: cover;
