--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -1,7 +1,7 @@
-#btnContainer {
+.Work {
   margin-top: 5vh;
-  margin-bottom: 0;
-  width: 20vw;
-  display: flex;
-  justify-content: space-around;
+}
+
+#btnContainer, #btnContainer1 {
+  margin: 5vh auto;
 }
