working route for one piece of work

--- a/src/components/BigProjCard/Card.css
+++ b/src/components/BigProjCard/Card.css
@@ -1,10 +1,10 @@
-#proj {
-  display: block;
+.project {
+  margin-top: 5vh;
 }
-#proj{
+#bigproj{
   width: 80vw;
-  height: 100vh;
+  margin: 5vh auto;
 }
-#proj:hover {
+#bigproj:hover {
   box-shadow: 1px 1px 1px 1px gray;
 }
