back button on equation

--- a/src/components/BigProjCard/Card.css
+++ b/src/components/BigProjCard/Card.css
@@ -8,3 +8,16 @@
 #bigproj:hover {
   box-shadow: 1px 1px 1px 1px gray;
 }
+#back {
+  background: none;
+  color: gray;
+}
+
+#back:hover {
+  background: none;
+  color: black;
+}
+
+#back:active {
+  background: none;
+}
