--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,9 +1,13 @@
 .About {
   text-align: center;
 }
-/*#imgcontainer {
+#first {
+  margin-left: -5vw;
+}
+#imgcontainer {
   display: flex;
   justify-content: center;
+  margin: 14vh auto;
   height: 30vh;
 }
 
@@ -11,7 +15,7 @@
   width: 70%;
   border-radius: 1%;
   box-shadow: 1px 1px 1px 1px gray;
-}*/
+}
 
 #logoContainer {
   width: 100vw;
@@ -24,7 +28,7 @@
 }
 
 #quoteContainer {
-  margin-left: 3vw;
+  /*margin-left: 3vw;*/
 }
 
 .section {
